Guard against invalid blueprints, closes #6091